# oj-eval-openhands-069-20260425194432

./: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  pointer_test  template.h  test.cpp
